--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2798,4 +2798,5 @@ font_family      family="Monocraft Nerd Font"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+font_size 15
 # END_KITTY_FONTS
