--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -33,7 +33,7 @@
 
     "clock": {
         "timezone": "Europe/Copenhagen",
-        "format": "{:%H:%M:%S}",
+        "format": "{:%a %d %b %H:%M:%S}",
         "interval": 1,
         "tooltip": true,
         "tooltip-format": "{:%d-%m-%Y Week %V %A}"
